# evaluation-machine-for-classification-models

./: CMakeLists.txt  README.md  main.cpp
icon/: dark_custom.rgs  iconset.rgi.rgi  jungle.rgs  white_red.rgs
lib/: CMakeLists.txt  component.cpp  element.h  libtransform.cpp  libtransform.h  rayoutgen.hpp
model/: Dermatofitosis.csv
resources/: memapp.rc
